Landing funcionando adecuadamente, lleva a los otros componentes

--- a/NotasApp/src/app/componentes/landing/landing.component.html
+++ b/NotasApp/src/app/componentes/landing/landing.component.html
@@ -5,7 +5,7 @@
     <h1>Bienvenido a NotasApp</h1>
     <h2>¿Donde te gustaria empezar?</h2>
     <div class="botones-inicio">
-        <button class="btn-landing"> Ver notas </button>
-        <button class="btn-landing"> Nueva nota </button>
+        <button class="btn-landing" (click)="irAListaNotas()"> Ver notas </button>
+        <button class="btn-landing" (click)="irANuevaNota()"> Nueva nota </button>
     </div>
 </div>
