Logre hacer que corra el back pero aun no lo conecte con el front

--- a/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
+++ b/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
@@ -1,3 +1,4 @@
-<div>
-    <h1> Estas son tus notas </h1>
+<div *ngFor="let nota of notas">
+    <h3>{{ nota.titulo }}</h3>
+    <p>{{ nota.contenido }}</p>
 </div>
