--- a/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
+++ b/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
@@ -1,4 +1,9 @@
-<div *ngFor="let nota of notas">
-    <h3>{{ nota.titulo }}</h3>
-    <p>{{ nota.contenido }}</p>
+<div class="tarjetas-notas">
+    <div *ngFor="let nota of notas" class="tarjeta">
+        <h3>{{ nota.titulo }}</h3>
+        <p>{{ nota.descripcion }}</p>
+        <span>{{ nota.creada }}</span>
+        <br>
+        <span>{{ nota.completada }}</span>
+    </div>
 </div>
