se crea componente detalleNota y se trae la info por nota

--- a/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
+++ b/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
@@ -1,5 +1,5 @@
 <div class="tarjetas-notas">
-    <div *ngFor="let nota of notas" class="tarjeta">
+    <div *ngFor="let nota of notas" class="tarjeta" [routerLink]="['/nota', nota._id]">
         <h3>{{ nota.titulo }}</h3>
         <p>{{ nota.descripcion }}</p>
         <span>{{ nota.creada }}</span>
