--- a/NotasApp/src/app/componentes/lista-notas/lista-notas.component.css
+++ b/NotasApp/src/app/componentes/lista-notas/lista-notas.component.css
@@ -12,7 +12,7 @@
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: calc(30% - 20px); /* Tres tarjetas por fila, con espacio entre ellas */
+    width: calc(30% - 20px);
     box-sizing: border-box;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     overflow: hidden;
@@ -20,7 +20,7 @@
 }
 
 .tarjeta:hover {
-    transform: translateY(-8px); /* Efecto de elevarse en hover */
+    transform: translateY(-8px);
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
 }
 
