--- a/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
+++ b/NotasApp/src/app/componentes/lista-notas/lista-notas.component.html
@@ -2,8 +2,10 @@
     <div *ngFor="let nota of notas" class="tarjeta">
         <h3>{{ nota.titulo }}</h3>
         <p>{{ nota.descripcion }}</p>
-        <span>{{ nota.creada }}</span>
+        <span>Fecha: {{ nota.creada }}</span>
         <br>
-        <span>{{ nota.completada }}</span>
+        <span>Estado: {{ nota.completada }}</span>
+        <br>
+        <span>Id: {{ nota._id }}</span>
     </div>
 </div>
