--- a/NotasApp/src/styles.css
+++ b/NotasApp/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background: #FCE1CF; /* Fondo del body */
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(233,148,148,1) 100%);
     margin: 0; /* Eliminar márgenes por defecto */
     height: 100vh; /* Asegúrate de que el body ocupe toda la altura */
 }
